--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -25,4 +25,31 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+} */
+
+.header {
+  background-color: red;
+  height: 120px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header__logo {
+  margin-top: 20px;
+  height: 80px;
+
+}
+
+.header__title{
+  font-size: 20px;
+}
+
+.main {
+  padding: 30px;
+  background-color: yellow;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
 }
