--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
   to { transform: rotate(360deg); }
 } */
 
+.app {
+  width: 100%;
+
+}
+
 .header {
   background-color: red;
   height: 120px;
@@ -49,7 +54,159 @@
 .main {
   padding: 30px;
   background-color: yellow;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
+}
+
+.pokemon__list {
+  list-style: none;
+  width: 100%;
+  margin: 30px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 80px;
+}
+
+.pokemon__container {
+  width: 100%;
+  height: 400px;
+  border: black solid 2px;
+}
+
+.pokemon__image--container {
+  background-color: white;
+  height: 220px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pokemon__image {
+  width: 80%;
+}
+
+.pokemon__data {
+  background-color: red;
+  height: 180px;
+}
+
+.pokemon__title {
+  margin: 0;
+  padding: 20px;
+  font-size: 15px;
+  font-family: monospace;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.pokemon__number {
+  padding: 10px;
+}
+
+.pokemon__type--list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 10px;
+  padding-left: 0;
+}
+
+.pokemon__type {
+  background-color: yellow;
+  list-style: none;
+  align-items: center;
+  width: 80px;
+  margin-bottom: 10px;
+  padding: 5px;
+  border: white solid 1px;
+  border-radius: 5px;
+
+}
+
+.bug {
+  background-color: rgb(151, 165, 29);
+}
+
+.dark {
+  background-color: rgb(100, 78, 64);
+}
+
+.dragon {
+  background-color: rgb(100, 78, 64);
+}
+
+.electric {
+  background-color: rgb(246, 201, 19);
+}
+
+.fairy {
+  background-color: rgb(232, 120, 144);
+}
+
+.flying {
+  background-color: rgb(142, 111, 235);
+}
+
+.ice {
+  background-color: rgb(126, 206, 206);
+}
+
+.fighting {
+  background-color: rgb(174, 42, 36);
+}
+
+.fire {
+  background-color: rgb(237, 109, 18);
+}
+
+.ghost {
+  background-color: rgb(100, 78, 136);
+}
+
+.grass {
+  background-color: rgb(105, 194, 61);
+}
+
+.ground {
+  background-color: rgb(219, 181, 77);
+}
+
+.normal {
+  background-color: rgb(156, 156, 99);
+}
+
+.poison {
+  background-color: rgb(146, 58, 146);
+}
+
+.psychic {
+  background-color: rgb(247, 54, 112);
+}
+
+.rock {
+  background-color: rgb(164, 143, 50);
+}
+
+.steel {
+  background-color: rgb(160, 160, 192);
+}
+
+.water {
+  background-color: rgb(69, 120, 237);
+}
+
+.button {
+  background-color: white;
+  color: black;
+  font-size: 15px;
+  padding: 5px 12px;
+  margin-left: 40px;
+  border: none;
+	outline: none;
+	border: 1px solid black;
+	cursor: pointer;
 }
